<resources>
    <string name="app_name">App SegClas</string>
    <string name="user">WELCOME TO MY APP</string>
    <string name="btn1">Login</string>
    <string name="btn2">Ingresar</string>
    <string name="Alarma">Crear Alarma</string>
    <string name="Camara">Abrir Camara</string>
    <string name="Send">Enviar</string>
    <string name="title_activity_pantalla_two">PantallaTwo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titulo">CALCULADORA</string>
    <string name="texto1">Numero: </string>
    <string name="textobase">Ingrese el numero</string>
    <string name="btncalculadora">Calculadora</string>
</resources>